--- a/src/components/ui/tabs/tabs.css
+++ b/src/components/ui/tabs/tabs.css
@@ -148,7 +148,7 @@
 }
 
 :host([vertical]) .tab-list ::slotted(stellar-tab) {
-  height: 4rem;
+  height: auto;
 }
 
 :host([height="auto"]) {
